<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_resultado"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResult">

        <RadioButton
            android:id="@+id/radioD4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d4" />

        <RadioButton
            android:id="@+id/radioD6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d6" />

        <RadioButton
            android:id="@+id/radioD8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d8" />

        <RadioButton
            android:id="@+id/radioD10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d10" />

        <RadioButton
            android:id="@+id/radioD12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d12" />

        <RadioButton
            android:id="@+id/radioD20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d20" />

        <RadioButton
            android:id="@+id/radioD100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dado_d100" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerDiceCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="60dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupDice" />

    <Button
        android:id="@+id/buttonRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="52dp"
        android:text="@string/button_rolar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerDiceCount" />


</androidx.constraintlayout.widget.ConstraintLayout>

